hexa-infrastructure/src/main/kotlin/com/example/kopringhexa/global/error/custom/ErrorProperty.kt
package com.example.kopringhexa.global.error.custom

interface ErrorProperty {
    fun status(): Int
    fun message(): String
}